# okint-rn-storage

./: .gitignore  LICENSE  README.md  eslint.config.mjs  jest.config.js  okint-rn-storage.podspec  package.json  react-native.config.js  tsconfig.build.json  tsconfig.json
.github/workflows/: ci.yml
android/: build.gradle  proguard-rules.pro
android/src/main/: AndroidManifest.xml
android/src/main/java/com/okint/rnstorage/: OkintRnStorageModule.kt  OkintRnStoragePackage.kt
android/src/main/jni/: CMakeLists.txt  OkintJNI.cpp
cpp/: OkintJSI.cpp  OkintJSI.h
ios/: OkintRnStorage.m  OkintRnStorageJSI.mm
src/: errors.ts  facade.ts  index.ts  types.ts  validate.ts
src/__tests__/: audit.spec.ts  facade.spec.ts  index.spec.ts  jsi-store.spec.ts  memory.spec.ts  native-backend.spec.ts  sync-store.spec.ts  validate.spec.ts
src/backends/: memory.ts  native-backend.ts
src/native/: bridge.ts  jsi.ts
src/sync/: jsi-store.ts  persistence.ts  sync-store.ts
